kustomize/base/argilla/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: morpheus-feedback-api
  labels:
    app: morpheus-feedback-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: morpheus-feedback-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: morpheus-feedback-api
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: argilla-user-feedback-ips
      serviceAccountName: argilla
      securityContext:
        fsGroup: 1000
      containers:
        - name: flask-service
          image: quay.io/exploit-iq/user-feedback-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
        - name: argilla-server
          image: argilla/argilla-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6900
        - name: argilla-worker
          image: argilla/argilla-server:latest
          imagePullPolicy: IfNotPresent
          command: ["bash","-c","python -m argilla_server worker --num-workers $BACKGROUND_NUM_WORKERS"]
        - name: redis
          image: redis:6
          imagePullPolicy: IfNotPresent
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.17.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /usr/share/elasticsearch/data
            name: user-feedback-storage
            subPath: elasticsearch
        - name: postgresql
          image: postgres:13
          imagePullPolicy: IfNotPresent
          volumeMounts: 
            - name: user-feedback-storage
              mountPath: /var/lib/postgresql
              subPath: postgres
      serviceAccount: argilla
      volumes:
      - name: user-feedback-storage
        persistentVolumeClaim:
          claimName: argilla-user-feedback-pvc
