kustomize/base/argilla/argilla-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argilla
  labels:
    app: argilla
spec:
  selector:
    app: exploit-intelligence-feedback-api
  ports:
    - protocol: TCP
      port: 6900
      targetPort: 6900
  type: ClusterIP
