kustomize/base/argilla/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exploit-intelligence-feedback-api
  labels:
    app: exploit-intelligence-feedback-api
spec:
  selector:
    app: exploit-intelligence-feedback-api
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
